--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "~2.0.1",
     "@angular/router": "~3.0.1",
     "@angular/upgrade": "~2.0.1",
+    "@types/express": "^4.0.33",
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
@@ -39,25 +40,25 @@
     "es6-shim": "0.33.3",
     "express": "^4.14.0",
     "gulp-concat": "2.6.0",
+    "gulp-nodemon": "^2.2.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
+    "tsc": "^1.20150623.0",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.2.30",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.16",
+    "codelyzer": "~0.0.26",
     "concurrently": "^3.0.0",
     "del": "2.2.0",
     "gulp": "3.9.0",
     "gulp-concat": "2.6.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "1.6.0",
-    "gulp-typescript": "2.10.0",
-    "lite-server": "^2.2.2",
-    "run-sequence": "1.1.5",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0",
-    "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.16",
-    "codelyzer": "~0.0.26",
+    "gulp-typescript": "3.0.2",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -65,8 +66,12 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "lite-server": "^2.2.2",
     "protractor": "4.0.9",
+    "run-sequence": "1.1.5",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0"
+    "tslint": "3.13.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
