--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
+    "start": "gulp",
     "lint": "tslint \"client/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -23,15 +23,6 @@
   },
   "homepage": "https://github.com/gabjauf/epimovies#readme",
   "dependencies": {
-    "@angular/common": "~2.0.1",
-    "@angular/compiler": "~2.0.1",
-    "@angular/core": "~2.0.1",
-    "@angular/forms": "~2.0.1",
-    "@angular/http": "~2.0.1",
-    "@angular/platform-browser": "~2.0.1",
-    "@angular/platform-browser-dynamic": "~2.0.1",
-    "@angular/router": "~3.0.1",
-    "@angular/upgrade": "~2.0.1",
     "@types/express": "^4.0.33",
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
@@ -48,9 +39,8 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.16",
+    "@types/node": "^6.0.45",
+    "bower": "^1.7.7",
     "codelyzer": "~0.0.26",
     "concurrently": "^3.0.0",
     "del": "2.2.0",
@@ -59,13 +49,12 @@
     "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "3.0.2",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-junit-reporter": "^1.1.0",
     "lite-server": "^2.2.2",
     "protractor": "4.0.9",
     "run-sequence": "1.1.5",
