--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ node_modules
 jspm_packages
 client/bower_components
 
+# Build Directory
+server/build/*
+
 # Optional npm cache directory
 .npm
 
