--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "concurrently": "^3.0.0",
     "del": "2.2.0",
     "gulp": "3.9.0",
+    "gulp-clean-compiled-typescript": "^1.1.0",
     "gulp-concat": "2.6.0",
     "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "1.6.0",
