--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.14.0",
     "gulp-concat": "2.6.0",
     "gulp-nodemon": "^2.2.1",
+    "moment": "^2.16.0",
     "mysql": "^2.11.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
