--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-nodemon": "^2.2.1",
     "moment": "^2.16.0",
     "mysql": "^2.11.1",
+    "neo4j": "^2.0.0-RC2",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
